Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8238735/T8238735.out
T8238735.java:11:43: compiler.err.prob.found.req: (compiler.misc.not.a.functional.intf: boolean)
1 error
